feat: get setting api
