# docs/swagger.json
@@ -92,6 +92,22 @@
                 }
             }
         },
+        "/api/v1/general/settings": {
+            "get": {
+                "tags": [
+                    "general"
+                ],
+                "operationId": "GetSettings",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/GetSettingsRes"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/general/summary": {
             "get": {
                 "tags": [
@@ -291,6 +307,14 @@
                     "type": "number"
                 },
                 "xau_price_gram": {
+                    "type": "number"
+                }
+            }
+        },
+        "GetSettingsRes": {
+            "type": "object",
+            "properties": {
+                "tax_percentage": {
                     "type": "number"
                 }
             }
